--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -113,6 +113,7 @@
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.constants.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.service.js"></script>
+<script type="text/javascript" src="js/portal/shared/search/search.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/resources/resources.module.js"></script>
 <script type="text/javascript" src="js/portal/resources/resources.config.js"></script>
