--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -125,7 +125,10 @@
                   <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </a>
-                  <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
+                  <!-- <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
+                    <i class="glyphicon glyphicon-cog"></i>
+                  </a> -->
+                    <a ui-sref=".edit({id: item.id,isAdvanced:true})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
                     <i class="glyphicon glyphicon-cog"></i>
                   </a>
                   <a href="" ng-if="!item.loading" ng-click="deleteDomain(item)" tooltip="Delete Domain">
