--- a/code/parts/domains/edit.html
+++ b/code/parts/domains/edit.html
@@ -15,14 +15,11 @@
               <a ui-sref="^" ng-disabled="_loading" class="btn btn-default">
                 <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
               </a>
-              <!--   <a ui-sref="^.advanced({id: params.id})" ng-disabled="_loading" class="btn btn-info">
-                <i class="glyphicon glyphicon-cog"></i>&nbsp; Advanced Mode
-              </a> -->
               <a href="" ng-show="!isAdvancedMode" ng-click="onChangeModeView()" ng-disabled="_loading" class="btn btn-info">
                 <i class="icon-revapm-cogs"></i>&nbsp; Advanced Mode
               </a>
               <a href="" ng-show="isAdvancedMode" ng-click="onChangeModeView()" ng-disabled="_loading" class="btn btn-info">
-                <i class="glyphicon glyphicon-cog"></i>&nbsp; Simple Mode
+                <i class="glyphicon glyphicon-cog"></i>&nbsp; Basic Mode
               </a>
             </div>
           </div>
@@ -31,8 +28,8 @@
       <div class="panel-body">
         <div class="form-horizontal" ng-show="isAdvancedMode">
           <div name="json" class="col-md-12 domains-advanced-mode-edit" id="json" ng-model="modelAdvance" options="jsoneditor.options" ng-jsoneditor style="height: 550px; padding-left: 0;"></div>
-          <div class="form-group " style="margin-top: 15px;">
-            <div class="col-sm-offset-2 col-sm-10">
+          <div class="form-group ">
+            <div class="col-sm-offset-2 col-sm-10" style="margin-top: 15px;">
               <a ui-sref="^" class="btn btn-default">
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
