--- a/code/parts/domains/configure_advanced.html
+++ b/code/parts/domains/configure_advanced.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+<!--TODO: delete this template because it deprecated and not uses -->
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
