--- a/code/parts/profile/edit-company.html
+++ b/code/parts/profile/edit-company.html
@@ -42,7 +42,7 @@
                         <div class="col-md-12">
                             <div class="pull-left">
                                 <a ng-disabled="_loading"
-                                   ui-sref="index.accountSettings.users"
+                                   ui-sref="index.accountSettings.companies"
                                    class="btn btn-default">
                                     <i class="glyphicon glyphicon-arrow-left"></i>&nbsp;
                                     Back
