--- a/code/parts/profile/edit-company.html
+++ b/code/parts/profile/edit-company.html
@@ -37,7 +37,7 @@
     <div class="row" ng-init="initEditCompany()">
         <div class="col-md-12">
             <div class="panel panel-default">
-                <div class="panel-heading">
+                <div class="panel-heading" ng-if="!userService.isAdmin()">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
