charts with datetime X axis, modified

--- a/code/dev/parts/reports/charts/http-status-code.html
+++ b/code/dev/parts/reports/charts/http-status-code.html
@@ -14,5 +14,5 @@
   Loading
 </div>
 <div class="auto-scroll"  ng-hide="!traffic.series || !traffic.series.length">
-  <div style="min-width: 500px; min-height: 350px" line-chart ng-data="traffic"></div>
+  <div style="min-width: 500px; min-height: 350px" line-chart ng-data="traffic" ng-chart-options="chartOptions"></div>
 </div>
