Shearch click auto typeahead

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -113,6 +113,7 @@
 <script type="text/javascript" src="js/portal/shared/util/util.factory.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/ui-sref-active-if.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/menu-toggle.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/directives/typeahead.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.constants.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter-generator/filter-generator.service.js"></script>
