Disable Domains, Users, Change Password forms submit buttons if some field is not entered

--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -138,7 +138,7 @@
                 Cancel
               </a>
               <button class="btn btn-success"
-                      ng-disabled="_loading">
+                      ng-disabled="disableSubmit(model)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
                 Create Domain
