--- a/code/dev/parts/apps/configure.html
+++ b/code/dev/parts/apps/configure.html
@@ -42,7 +42,7 @@
                      id="json"
                      ng-model="copyForEditor"
                      options="obj.options"
-                     ng-jsoneditor
+                     ng-jsoneditor="jsonEditorEvent"
                      style="height: 550px"></div>
 
                 <div class="col-sm-12" style="margin-top: 15px">
@@ -53,21 +53,21 @@
                     Cancel
                   </a>
                   <button class="btn btn-info"
-                          ng-disabled="_loading"
+                          ng-disabled="_loading || jsonIsInvalid"
                           ng-click="verify(copyForEditor)">
                     <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                     <i class="glyphicon glyphicon-check" ng-if="!_loading"></i>&nbsp;
                     Verify
                   </button>
                   <button class="btn btn-success"
-                          ng-disabled="_loading"
+                          ng-disabled="_loading || jsonIsInvalid"
                           ng-click="updateApp(copyForEditor)">
                     <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                     <i class="glyphicon glyphicon-file" ng-if="!_loading"></i>&nbsp;
                     Update
                   </button>
                   <button class="btn btn-success"
-                          ng-disabled="_loading"
+                          ng-disabled="_loading || jsonIsInvalid"
                           ng-click="publish(copyForEditor)">
                     <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                     <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
