--- a/code/dev/parts/keys/list.html
+++ b/code/dev/parts/keys/list.html
@@ -80,7 +80,7 @@
             <tr
               ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
               <td>
-                <a ng-click="openUpdateDialogFor(item.id)" ng-if="!item.loading" tooltip="Edit API Key">
+                <a ui-sref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" tooltip="Edit API Key">
                   {{item.key_name}}
                 </a>
               </td>
@@ -94,7 +94,7 @@
               </td>
               <td class="actions">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                <a ng-click="openUpdateDialogFor(item.id)" ng-if="!item.loading" tooltip="Edit API Key">
+                <a ui-sref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" tooltip="Edit API Key">
                   <i class="glyphicon glyphicon-pencil"></i>
                 </a>
                 <a href="" ng-if="!item.loading" ng-click="deleteKey(item)" tooltip="Delete API Key">
