--- a/code/index.html
+++ b/code/index.html
@@ -92,6 +92,7 @@
 <script type="text/javascript" src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
 <script type="text/javascript" src="bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
 <script type="text/javascript" src="bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
+<script type="text/javascript" src="bower_components/angular-clipboard/angular-clipboard.js"></script>
 
 
 <script src="config.js"></script>
