--- a/code/parts/keys/list.html
+++ b/code/parts/keys/list.html
@@ -22,6 +22,11 @@
     </div>
   </div>
 
+  <h3 class="hidden-lg hidden-md hidden-sm">XS</h3>
+  <h3 class="hidden-lg hidden-md hidden-xs">SM</h3>
+  <h3 class="hidden-lg hidden-sm hidden-xs">MD</h3>
+  <h3 class="hidden-md hidden-sm hidden-xs">LG</h3>
+
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
@@ -65,14 +70,14 @@
                 <a href="" ng-click="order('updated_at')">Last Update</a>
                 <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.updated_at}"></span>
               </th>
-              <th class="thin">
-                <a href="" ng-click="order('read_only_status')">Read Only</a>
-                <span class="sortorder" ng-show="filter.predicate === 'read_only_status'" ng-class="{reverse: filter.read_only_status}"></span>
-              </th>
-              <th>
-                <a class="thin" href="" ng-click="order('active')">Active</a>
-                <span class="sortorder" ng-show="filter.predicate === 'active'" ng-class="{reverse: filter.active}"></span>
-              </th>
+              <!--<th class="thin">-->
+                <!--<a href="" ng-click="order('read_only_status')">Read Only</a>-->
+                <!--<span class="sortorder" ng-show="filter.predicate === 'read_only_status'" ng-class="{reverse: filter.read_only_status}"></span>-->
+              <!--</th>-->
+              <!--<th>-->
+                <!--<a class="thin" href="" ng-click="order('active')">Active</a>-->
+                <!--<span class="sortorder" ng-show="filter.predicate === 'active'" ng-class="{reverse: filter.active}"></span>-->
+              <!--</th>-->
               <th class="actions">Actions</th>
             </tr>
             </thead>
@@ -80,21 +85,25 @@
             <tr
               ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
               <td>
-                <a ng-click="openUpdateDialogFor(item.id)" ng-if="!item.loading" tooltip="Edit API Key">
+                <a ui-sref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" tooltip="Edit API Key">
                   {{item.key_name}}
                 </a>
               </td>
-              <td>{{item.key}}</td>
+              <td>
+                <button class="btn btn-primary" clipboard text="item.key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;"><i class="fa fa-files-o"></i></button>
+                <button class="btn btn-primary" ng-click="switchKeyVisibility(item)" ng-hide="item.showKey" style="vertical-align: initial;">Show API Key</button>
+                <input ng-if="item.showKey" ng-blur="switchKeyVisibility(item)" class="form-control" value="{{item.key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;" focus-me="item.showKey">
+              </td>
               <td>{{ getRelativeDate(item.updated_at) }}</td>
-              <td>
-                <i class="glyphicon pointer" tooltip="Toggle active status" ng-hide="item.loading" ng-click="toggleProperty(item, 'read_only_status')" ng-class="item.read_only_status && 'glyphicon-check' || 'glyphicon-unchecked'"></i>
-              </td>
-              <td>
-                <i class="glyphicon pointer" tooltip="Toggle active status" ng-hide="item.loading" ng-click="toggleProperty(item, 'active')" ng-class="item.active && 'glyphicon-check' || 'glyphicon-unchecked'"></i>
-              </td>
+              <!--<td>-->
+                <!--<i class="glyphicon pointer" tooltip="Toggle active status" ng-hide="item.loading" ng-click="toggleProperty(item, 'read_only_status')" ng-class="item.read_only_status && 'glyphicon-check' || 'glyphicon-unchecked'"></i>-->
+              <!--</td>-->
+              <!--<td>-->
+                <!--<i class="glyphicon pointer" tooltip="Toggle active status" ng-hide="item.loading" ng-click="toggleProperty(item, 'active')" ng-class="item.active && 'glyphicon-check' || 'glyphicon-unchecked'"></i>-->
+              <!--</td>-->
               <td class="actions">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                <a ng-click="openUpdateDialogFor(item.id)" ng-if="!item.loading" tooltip="Edit API Key">
+                <a ui-sref="index.accountSettings.keys.edit({id: item.id})" ng-if="!item.loading" tooltip="Edit API Key">
                   <i class="glyphicon glyphicon-pencil"></i>
                 </a>
                 <a href="" ng-if="!item.loading" ng-click="deleteKey(item)" tooltip="Delete API Key">
