--- a/code/parts/profile/edit.html
+++ b/code/parts/profile/edit.html
@@ -83,7 +83,7 @@
                   Cancel
                 </a>
 
-                <button class="btn btn-success" ng-disabled="_loading">
+                <button class="btn btn-success" ng-disabled="disableSubmit(pass)">
                   <i class="glyphicon glyphicon-ok"></i>&nbsp;
                   Update Password
                 </button>
