--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -158,7 +158,7 @@
                 <!-- billing_info.last_name-->
                 <div class="form-group col-md-6" ng-class="{ 'has-error': Company.lastName.$invalid &&
                             Company.lastName.$dirty }">
-                  <label for="lastName" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="First Name">Last Name *</label>
+                  <label for="lastName" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="Last Name">Last Name *</label>
                   <div class="col-sm-8">
                     <input type="text" class="form-control" required id="last_name" name="lastName" placeholder="Last Name" ng-model="model.billing_info.last_name" ng-disabled="_loading">
                   </div>
@@ -173,42 +173,46 @@
               </div>
               <!-- Addres info-->
               <div class="row" ng-if="!model.use_contact_info_as_billing_info">
-                <div class="form-group col-md-6">
-                  <label for="address1" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="Will be used as a billing address later.">Address *</label>
+                <div class="form-group col-md-6" ng-class="{ 'has-error': Company.billingAddress1.$invalid &&
+                            Company.billingAddress1.$dirty }">
+                  <label for="billingAddress1" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="Will be used as a billing address.">Address *</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" required id="address1" placeholder="Address 1" ng-model="model.address1" ng-disabled="_loading">
+                    <input type="text" class="form-control" required id="billingAddress1" name="billingAddress1" placeholder="Address 1" ng-model="model.billing_info.address1" ng-disabled="_loading">
                   </div>
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="address2" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="Will be used as a billing address later.">Address (Line 2) &nbsp;</label>
+                  <label for="billingAddress2" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="Will be used as a billing address later.">Address (Line 2) &nbsp;</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" id="address2" placeholder="Address (Line 2)" ng-model="model.address2" ng-disabled="_loading">
+                    <input type="text" class="form-control" id="billingAddress2" placeholder="Address (Line 2)" ng-model="model.billing_info.address2" ng-disabled="_loading">
                   </div>
                 </div>
               </div>
               <!-- -->
               <div class="row" ng-if="!model.use_contact_info_as_billing_info">
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-6" ng-class="{ 'has-error': Company.billingCountry.$invalid &&
+                            Company.billingCountry.$dirty }">
                   <label for="billingCountry" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="Will be used in a billing address.">Country *</label>
                   <div class="col-sm-8">
                     <select type="text" class="form-control" id="billingCountry" placeholder="Country" required ng-model="model.billing_info.country" ng-options="key as value for (key , value) in countries" ng-disabled="_loading">
                     </select>
                   </div>
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-6" ng-class="{ 'has-error': Company.billingState.$invalid &&
+                            Company.billingState.$dirty }">
                   <label for="billingState" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="Will be used in a billing address.">State *</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" id="billingState" required placeholder="State" ng-model="model.billing_info.state" ng-disabled="_loading">
+                    <input type="text" class="form-control" id="billingState" name="billingState" required placeholder="State" ng-model="model.billing_info.state" ng-disabled="_loading">
                   </div>
                 </div>
-                <div class="form-group col-md-6">
+                <div class="form-group col-md-6" ng-class="{ 'has-error': Company.billingCity.$invalid &&
+                            Company.billingCity.$dirty }">
                   <label for="billingCity" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="Will be used in a billing address.">City *</label>
                   <div class="col-sm-8">
-                    <input type="text" class="form-control" id="billingCity" required placeholder="City" ng-model="model.billing_info.city" ng-disabled="_loading">
+                    <input type="text" class="form-control" id="billingCity" name="billingCity" required placeholder="City" ng-model="model.billing_info.city" ng-disabled="_loading">
                   </div>
                 </div>
                 <div class="form-group col-md-6" ng-class="{ 'has-error': Company.billingZipcode.$invalid &&
-                            Company.Zipcode.$dirty }">
+                            Company.billingZipcode.$dirty }">
                   <label for="billingZipcode" class="col-sm-4 control-label" popover-trigger="mouseenter" popover="Will be used in a billing address.">Zip Code *</label>
                   <div class="col-sm-8">
                     <input type="text" ng-pattern="zipRegex" class="form-control" id="billingZipcode" name="billingZipcode" maxlength="10" required placeholder="Zip Code" ng-model="model.billing_info.zipcode" ng-disabled="_loading">
