--- a/code/parts/apps/edit.html
+++ b/code/parts/apps/edit.html
@@ -109,8 +109,8 @@
             >SDK Key</label>
 
             <div class="col-sm-10">
-              <button class="btn btn-primary" clipboard text="model.sdk_key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;"><i class="fa fa-files-o"></i></button>
-              <button class="btn btn-primary" ng-click="switchKeyVisibility(model)" ng-hide="model.showKey" style="vertical-align: initial;">Show API Key</button>
+              <button class="btn btn-primary" clipboard text="model.sdk_key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;"  tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
+              <button class="btn btn-primary" ng-click="switchKeyVisibility(model)" ng-hide="model.showKey" style="vertical-align: initial;">Show SDK Key</button>
               <input id="key" ng-if="model.showKey" ng-blur="switchKeyVisibility(model)" class="form-control" value="{{model.sdk_key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;" focus-me="model.showKey">
             </div>
           </div>
