--- a/code/parts/apps/list.html
+++ b/code/parts/apps/list.html
@@ -121,7 +121,7 @@
               <td>{{item.last_app_published_version}}</td>
               <td>{{ getRelativeDate(item.updated_at) }}</td>
               <td>
-                <button class="btn btn-primary" clipboard text="item.sdk_key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;"><i class="fa fa-files-o"></i></button>
+                <button class="btn btn-primary" clipboard text="item.sdk_key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;"  tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
                 <button class="btn btn-primary" ng-click="switchKeyVisibility(item)" ng-hide="item.showKey" style="vertical-align: initial;">Show SDK Key</button>
                 <input ng-if="item.showKey" ng-blur="switchKeyVisibility(item)" class="form-control" value="{{item.sdk_key}}" style="width: 300px; display: inline-block; position: absolute; z-index: 999; margin-left: 4px;" focus-me="item.showKey">
 
