Renamed “Subscription Name” column to “Billing Plan”

--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -80,7 +80,7 @@
                 <span class="sortorder" ng-show="filter.predicate === 'subscription_state'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th class="col-lg-1">
-                <a href="" ng-click="order('subscription_name')">Subscription Name</a>
+                <a href="" ng-click="order('subscription_name')">Billing Plan</a>
                 <span class="sortorder" ng-show="filter.predicate === 'subscription_name'" ng-class="{reverse: filter.reverse}"></span>
               </th>
               <th class="col-lg-1">
